# conventions

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: conventions-reference.md
examples/: conventions-review.md  conventions.html  conventions.md  conventions.raw.json  conventions.sarif
examples/fastapi/: CLAUDE.md  conventions-review.md  conventions.html  conventions.md  conventions.raw.json  conventions.sarif
examples/httpx/: conventions-review.md  conventions.html  conventions.md  conventions.raw.json  conventions.sarif
src/conventions/: __init__.py  __main__.py  cache.py  cli.py  config.py  docs_registry.py  fs.py  plugins.py  ratings.py  report.py  scan.py  schemas.py
tests/: conftest.py
tests/detectors/: test_api_routes.py  test_db_entities.py  test_dependency_health.py  test_generic_ci.py  test_generic_code_ownership.py  test_generic_config_patterns.py  test_generic_environment_setup.py  test_generic_generated_code.py  test_generic_task_runners.py  test_git_conventions_pr.py  test_go_data_flow.py  test_graph.py  test_import_aliases.py  test_node_data_flow.py  test_node_frontend.py  test_node_migrations.py  test_node_monorepo_packages.py  test_node_typescript.py  test_python_data_flow.py  test_python_testing.py  test_python_typing.py  test_repo_layout_enhanced.py  test_rust_data_flow.py
tests/fixtures/: node_typescript.ts  python_pytest.py  python_typed.py  python_untyped.py
tests/integration/: test_claude_output.py  test_cli.py  test_reports.py
tests/unit/: test_claude_output.py  (+3 more)
(+139 files in other folders)
